--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: page
 title: Recent Builds
-excerpt: "tomato rt-n custom builds"
+excerpt: "freshTomato ARM custom builds"
 search_omit: true
 ---
 
 <br>
-build #{{ site.data.ss.build }} <a href="https://travis-ci.org/oglopss/tomato-ci-ctf"><img src="https://travis-ci.org/oglopss/tomato-ci-ctf.svg" /></a>
+build #{{ site.data.ss.build }} <a href="https://travis-ci.org/oglopss/freshTomato-ARM-ci"><img src="https://travis-ci.org/oglopss/freshTomato-ARM-ci.svg" /></a>
 <ul>
 {% assign sorted_ss = site.data.ss.files | sort %}
 {% for f in sorted_ss %}
